Agregando detalles a Home

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -121,6 +121,14 @@ footer section ul li a{
 
 footer section ul li a:hover{
 	font-size: 22px;
+	transition: 400ms;
+}
+footer h3 {
+	text-align: center;
+	position: relative;
+}
+footer section ul li{
+	margin: 0;
 }
 
 .titulosHeader {
@@ -178,7 +186,7 @@ footer ul li img{
 		justify-content: space-around;
 		font-weight:bolder;
 		font-size: small;
-		margin-left: -10%;
+		margin-left: -8%;
 	}
 	
 	footer section ul li a{
@@ -349,32 +357,7 @@ header .header-top div{
 	align-items: center;	
 }
 /*--------------------------------------------*/
-main .top-main {
-	display: flex;
-}
-main .top-main img {
-	width: 100%;
-}
-main section img{
-	width: 100%;
-}
-main .articulos {
-	display: flex;
-}
-main .info-gral {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-}
-main .info-gral p{
-	background-color: rgb(230, 0, 0);
-	color: white;
-	display: inline-block;
-	padding: 30px;
-	margin: 10px;
-	border-radius: 15%;
 
-}
 /*--------------------------------------------*/
   /*Estilos del registro*/
 .logo-centrado{
@@ -401,6 +384,7 @@ main .terminos{
 }
 
 /*Estilos carrito*/
+
 main .carrito h2{
 	display: flex;
 	justify-content: center;
@@ -423,4 +407,88 @@ main section div.articulos-bolsa article{
 	display: flex;
 	justify-content: flex-start;
 	
+}
+
+ul{
+    list-style-type: none;
+}
+/*--------M-A-I-N-----H-O-M-E---------------------*/
+main .top-main .mascotas-img {
+	margin: 2vw;
+}
+main .top-main .container-intro{
+	max-width: 230px;
+	max-height: auto;
+	padding: 2vw;
+	margin-top: 8px;
+	border: solid black 1px;
+	text-align: center;
+	border-radius: 15%;
+	box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+main .top-main .container-intro p{
+	margin: 0;
+	width: 100%;
+}
+main .top-main .contenido-intro {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 3%;
+	
+}
+main .top-main .contenido-intro i {
+	color: #2239b8;
+}
+main .container-intro .subtittle{
+	font-size: 1.5rem;
+	font-weight: bolder;
+	padding-bottom: 5px;
+}
+main  .titulo{
+	display: flex;
+	justify-content: center;
+	font-size: 30px;
+	font-weight: bolder;
+}
+main .top-main {
+	display: flex;
+}
+main  .articulos article img {
+	width: 100%;
+}
+
+main .articulos {
+	display: flex;
+}
+
+main .info-gral {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+main .info-gral {
+	background-color: rgb(230, 0, 0);
+	color: white;
+	display: block;
+	text-align: center;
+	font-size: 28px;
+	padding: 1%;
+}
+main .info-gral:hover{
+	font-size: 30px;
+	transition: 300ms;
+	font-weight: bolder;
+}
+main .contenido-intro article:hover {
+	box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+/*-------A-R-T-I-C-U-L-O-S-----------------*/
+main .articulos {
+	margin: 2vw;
+}
+main .articulos article p {
+	margin-left: 4px;
+	margin-right: 4px;
+	font-size: 18px;
 }
