--- a/src/views/index.html
+++ b/src/views/index.html
@@ -89,44 +89,48 @@
     </header>
 
     <main>
-        <h1>En construccion UwU</h1>
+        <p class="titulo">La mejor tienda de mascotas</p>
         <section class="top-main">
             <div class="mascotas-img">
                 <img src="../images/PortadaMascotas.png" alt="PortadaMascotas">
             </div>
             <div class="contenido-intro">
-                <div>
-                    <h2>Nosotros</h2>
+                <div class="container-intro">
+                    <i class="fas fa-heartbeat fa-6x"></i>
+                    <p class="subtittle">Nuestra preocupación</p>
+                    <p class="info">La salud de tu mascota es primero</p>
                 </div>
-                <div>
-                    <h2>Articulos</h2>
+                <div class="container-intro">
+                    <i class="fas fa-cat fa-6x"></i>
+                    <p class="subtittle">Nuestra pasión</p>
+                    <p class="info">El buen trato a los animales</p>
+                </div>
+                <div class="container-intro">
+                    <i class="fab fa-hotjar fa-6x"></i>
+                    <p class="subtittle">Los mejores precios</p>
+                    <p class="info">Nos esforzamos por mantenernos. actualizados con las nuevas tendencias.</p>
+                </div>
+                <div class="container-intro">
+                    <i class="fas fa-medal fa-6x"></i>
+                    <p class="subtittle">Productos de primera calidad</p>
+                    <p class="info">La calidad de los productos es primordial para tu satisfacción y la de tu mascota.</p>
                 </div>
             </div>
         </section>
         <section class="info-gral">
-            <p>
-                About
-            </p>
-            <p>
-                More
-            </p>
-            <p>
-                Eeey
-            </p>
-            <p>
-                free
-            </p>
+            <div class="separador">
+                <p> Principales productos</p>
+            </div>
         </section>
          <h2>Lo mas destacado</h2>
         <section class="articulos">
-           
             <article>
                 <img src="../images/croquetas.jfif"alt="producto-1">
-                <p class="product-detail">Croquetas 1</p>
+                <p class="product-detail">Alimento Pro Plan OptiDerma Sensitive Skin Adult para perro adulto de raza mediana/grande 13kg</p>
             </article>
             <article>
                 <img src="../images/croquetas2.jfif" alt="producto 2">
-                <p>Croquetas 2</p>
+                <p>Alimento Pro Plan OptiDerma Sensitive Skin Adult para perro adulto de raza mediana/grande 13kg</p>
             </article>
             <article>
 
@@ -139,8 +143,6 @@
         <section class="new-products">
 
         </section>
-
-
     </main>
 
     <footer>
@@ -167,9 +169,9 @@
         <section>
             <h3>Redes sociales</h3>
             <ul>
-                <li><a href="www.facebook.com"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
-                <li><a href="www.twitter.com"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
-                <li><a href="web.whatsapp.com"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
+                <li><a href="https://www.facebook.com" target="__blank"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
+                <li><a href="https://www.twitter.com" target="__blank"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
+                <li><a href="https://web.whatsapp.com" target="__blank"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
             </ul>
         </section>
         <section>
@@ -183,8 +185,8 @@
         <section>
             <h3>Servicio al cliente</h3>
             <ul>
-                <li>Seguimiento de pedidos</li>
-                <li>Quejas y sugerencias</li>
+                <li><a href="#"><i class="fas fa-truck" ></i>  Seguimiento de pedidos</a></li>
+                <li><a href="#"><i class="fas fa-bullhorn" ></i>  Quejas y sugerencias</a></li>
             </ul>
         </section>
     </footer>
