--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -395,10 +395,15 @@ main .carrito h2{
 .img-producto{
 	width: 200px;
     height: 200px;
+	box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.75);
+	border-radius: 20px;
 }
 
 main section.bolsa article{
-    background-color: rgb(236, 236, 236);    
+    background-color: rgb(245, 245, 245); 
+	border-width: 1px;
+	border-style: solid;
+	border-color: rgb(178, 178, 178); 
     margin: 3% 5%;
 	border-radius: 20px;
 }
