--- a/src/views/carrito.html
+++ b/src/views/carrito.html
@@ -94,7 +94,7 @@
               <img src="/images/producto_1.jpg" alt="Chamarra negra Bad2Bone" class="img-producto">
               <div class="descripcion-producto">
                 <p class="descripcion">Bootique Chamarra Negra Bad2Bone</p>
-                <label class="talla">Talla: </label>
+                <label class="talla">Talla:</label>
                 <select name="talla">
                   <option value="xx-chico">xx-Chico</option>
                   <option value="x-chico">x-chico</option>
@@ -102,10 +102,12 @@
                   <option value="mediano">Mediano</option>
                   <option value="grande">Grande</option>
                 </select>
+                <div class="cantidad">
+                  <input type="submit" value="-">
+                  <input type="number" value="cantidad">
+                  <input type="submit" value="+">
+                </div>
                 <p class="precio">$499</p>
-                <input type="submit" value="-">
-                <input type="number" value="cantidad">
-                <input type="submit" value="+">
               </div>
             </article>
 
@@ -113,7 +115,7 @@
               <img src="/images/producto_2.jpg" alt="Collar Good2Go Rosa Neon" class="img-producto">
               <div class="descripcion-producto">
                 <p class="descripcion">Collar Acojinado Reflejante Rosa Neon Good2Go</p>
-                <label class="talla">Talla: </label>
+                <label class="talla">Talla:</label>
                 <select name="talla">
                   <option value="xx-chico">xx-Chico</option>
                   <option value="x-chico">x-chico</option>
@@ -121,10 +123,12 @@
                   <option value="mediano">Mediano</option>
                   <option value="grande">Grande</option>
                 </select>
-                  <p class="precio">$325</p>
+                <div class="cantidad">
                   <input type="submit" value="-">
                   <input type="number" value="cantidad">
                   <input type="submit" value="+">
+                </div>
+                  <p class="precio">$325</p>
               </div>
             </article>
 
@@ -132,7 +136,7 @@
               <img src="/images/producto_3.jpg" alt="Correa Good2Go Rosa Neon" class="img-producto">
               <div class="descripcion-producto">
                 <p class="descripcion">Correa Acojinada Reflejante Rosa Neon Good2Go</p>
-                <label class="talla">Talla: </label>
+                <label class="talla">Talla:</label>
                 <select name="talla">
                   <option value="xx-chico">xx-Chico</option>
                   <option value="x-chico">x-chico</option>
@@ -140,18 +144,20 @@
                   <option value="mediano">Mediano</option>
                   <option value="grande">Grande</option>
                   </select>
+                <div class="cantidad">
+                  <input type="submit" value="-">
+                  <input type="number" value="cantidad">
+                  <input type="submit" value="+">
+                </div>
                 <p class="precio">$439</p>
-                <input type="submit" value="-">
-                <input type="number" value="cantidad">
-                <input type="submit" value="+">
               </div>
             </article>
           </div>
         </section>
 
         <section class="seccion-resumen">
-          <h3>Resumen de la compra</h3>
           <div class="resumen">
+            <h3>Resumen de la compra</h3>
             <p class="direccion-envio">Calle Numero CP Ciudad</p>
             <p class="costo-envio">Gratis</p>
             <p class="total-envio">Total con envío</p>
@@ -161,37 +167,50 @@
         </section>
     </main>
 
-    <footer class="fondoAzulOscuro">
-        <section>  
-            <h1 class="titulosHeader">Categorías</h1>
-            <ul>
-                <li><a href="#"><i class="fas fa-dog"></i>&nbsp; Perros</a></li>
-                <li><a href="#"><i class="fas fa-cat"></i>&nbsp;Gatos</a></li>
-                <li><a href="#"><i class="fas fa-crow"></i>&nbsp;Aves</a></li>
-                <li><a href="#"><img src="../images/tortugaIcono.svg">&nbsp;Reptiles </a></li>
-                <li><a href="#"><img src="../images/ardillaIcono.svg">&nbsp;Roedores </a></li>
-                <li><a href="#"><i class="fas fa-fish"></i>&nbsp;Peces</a></li>
-            </ul>
-        </section>
-        
-        <section>
-            <h1 class="titulosHeader">Nosotros</h1>
-            <ul>
-                <li><a href="#"><i class="fas fa-file-signature"></i> &nbsp;Contacto</li>
-                <li><a href="#"><ion-icon name="people-circle-outline"></ion-icon> &nbsp;¿Quiénes somos?</a></li>
-                <li><a href="#"><ion-icon name="medical-outline"></ion-icon> &nbsp;Servicios</a></li>
-                <li><a href="#"><i class="fas fa-rss-square"></i> &nbsp;Nuestro blog</a></li>
-            </ul>
-        </section>
-        
-        <section>
-            <h1 class="titulosHeader">Redes sociales</h1>
-            <ul>
-                <li><a href="www.facebook.com"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
-                <li><a href="www.twitter.com"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
-                <li><a href="web.whatsapp.com"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
-            </ul>
-        </section>        
-    </footer>
+    <footer>
+      <section>
+          <h3>Categorías</h3>
+          <ul>
+              <li><a href="#"><i class="fas fa-dog"></i>&nbsp; Perros</a></li>
+              <li><a href="#"><i class="fas fa-cat"></i>&nbsp;Gatos</a></li>
+              <li><a href="#"><i class="fas fa-crow"></i>&nbsp;Aves</a></li>
+              <li><a href="#"><img src="../images/tortugaIcono.svg">&nbsp;Reptiles </a></li>
+              <li><a href="#"><img src="../images/ardillaIcono.svg">&nbsp;Roedores </a></li>
+              <li><a href="#"><i class="fas fa-fish"></i>&nbsp;Peces</a></li>
+          </ul>
+      </section>
+      <section>
+          <h3>Nosotros</h3>
+          <ul>
+              <li><a href="#"><i class="fas fa-file-signature"></i> &nbsp;Contacto</li>
+              <li><a href="#"><ion-icon name="people-circle-outline"></ion-icon> &nbsp;¿Quiénes somos?</a></li>
+              <li><a href="#"><ion-icon name="medical-outline"></ion-icon> &nbsp;Servicios</a></li>
+              <li><a href="#"><i class="fas fa-rss-square"></i> &nbsp;Nuestro blog</a></li>
+          </ul>
+      </section>
+      <section>
+          <h3>Redes sociales</h3>
+          <ul>
+              <li><a href="www.facebook.com"> <ion-icon name="logo-facebook"></ion-icon> &nbsp; Facebook</a></li>
+              <li><a href="www.twitter.com"><ion-icon name="logo-twitter"></ion-icon> &nbsp; Twitter</a></li>
+              <li><a href="web.whatsapp.com"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</WhatsApp></a></li>
+          </ul>
+      </section>
+      <section>
+          <form method="GET">
+              <label for="registro-footer" class="registro footer">
+                  <h3>Registrate</h3>
+                  <input type="text" placeholder="correo-elecro@yeah.com">
+              </label>
+          </form>
+      </section>
+      <section>
+          <h3>Servicio al cliente</h3>
+          <ul>
+              <li>Seguimiento de pedidos</li>
+              <li>Quejas y sugerencias</li>
+          </ul>
+      </section>
+  </footer>
     </body>
 </html>
