--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/css/normalize.css" rel="stylesheet">
-        <link href="/css/styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/e3af4c66c5.js" crossorigin="anonymous"></script>
-        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <%- include('./partials/head') %>
         <title>Carrito</title>
     </head>
 
