--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/normalize.css" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/ed17535c69.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <%- include('./partials/head') %>
     <title>Animalandia</title>
 </head>
 <body> 
