agregando route de edicion y metodo al controlador

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,10 +41,13 @@
             </div>
         </section>
         <section class="articulos">
+            <a href="/edicion">
             <article>
                 <img src="../images/croquetas.jfif"alt="producto-1">
                 <p class="product-detail">Alimento Pro Plan OptiDerma Sensitive Skin Adult para perro adulto de raza mediana/grande 13kg</p>
             </article>
+            </a>
+            
 
              <article>
                 <img src="../images/croquetas2.jfif" alt="producto 2">
