Mejora del estilo de edicion

--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -501,7 +501,7 @@ main section div.resumen input{
 /* Estilos Edicion Producto*/
 
 main .edicion-producto h1,
-.form-edicion{
+.form-edicion, .botones-edicion{
 	display: flex;
 	justify-content: center;
 }
