--- a/src/views/edicion.ejs
+++ b/src/views/edicion.ejs
@@ -48,8 +48,10 @@
                     <label for="instrucciones">Instrucciones:</label>
                     <textarea id="instrucciones" name="instrucciones" class="input-area"></textarea>
                 </p>
-                <button type="submit">Enviar</button>
-                <button type="button">Cancelar</button>
+                <div class="botones-edicion">
+                    <button type="submit">Enviar</button>
+                    <button type="button">Cancelar</button>
+                </div>
             </form>
         </div>
     </main>
