--- a/src/views/crear.ejs
+++ b/src/views/crear.ejs
@@ -3,6 +3,7 @@
 <head>
     <%- include('./partials/head') %>
     <title>Crear producto</title>
+    <link rel="stylesheet" href="/css/stylesCrear.css"> 
 </head>
 <body> 
   <%- include('./partials/header') %> 
@@ -12,42 +13,43 @@
         </div>
         <div class="form-edicion">
             <form action="/" method="POST">
-                <p>
+                <div>
                     <label for="nombre-producto">Nombre del producto:</label>
                     <input type="text" id="nombre-producto" name="nombre-producto" class="input-text">
-                </p>
-                <p>
+                    
+                </div>
+                <div>
                     <label for="img-principal">Imagen principal:</label>
                     <input type="file" id="img-principal" name="img-principal" class="input-file">
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="img-secundaria1">Imagen secundaria 1:</label>
                     <input type="file" id="img-secundaria1" name="img-secundaria1" class="input-file">
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="img-secundaria2">Imagen secundaria 2:</label>
                     <input type="file" id="img-secundaria2" name="img-secundaria2" class="input-file">
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="precio">Precio:</label>
                     <input type="number" id="precio" name="precio" class="input-text">
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="descripcion">Descripción:</label>
                     <textarea id="descripcion" name="descripcion" class="input-area"></textarea>
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="caracteristicas">Características:</label>
                     <textarea id="caracteristicas" name="caracteristicas" class="input-area"></textarea>
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="especificaciones">Especificaciones:</label>
                     <textarea id="especificaciones" name="especificaciones" class="input-area"></textarea>
-                </p>
-                <p>
+                </div>
+                <div>
                     <label for="instrucciones">Instrucciones:</label>
                     <textarea id="instrucciones" name="instrucciones" class="input-area"></textarea>
-                </p>
+                </div>
                 <div class="botones-edicion">
                     <button type="submit">Enviar</button>
                     <button type="button">Cancelar</button>
