--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -6,18 +6,16 @@
     </head>
     
     <body class="body-registro">
-    <header>
-        <div class="header-registro">
-            <img src="/images/logo.png" alt="Logo" class="logo-centrado">
-        </div>
-        <h2 class="header-registro">Crear Cuenta</h2>
-    </header>
+        <%- include('./partials/header') %>
     
-    <main>
-        <section>
-            <h3>Datos Personales</h3>
+        <main>
+        <section class="registro">
+            <h1>Crear Cuenta</h1>
             <div class="datos-personales">
-                <form action="/" method="POST">
+                <h3>Datos Personales</h3>
+            </div>
+            <div class="form-registro">
+            <form action="/" method="POST">
                     <p>
                         <label for="nombre">Nombre (s):</label>
                         <br>
@@ -81,7 +79,7 @@
                     <p>
                         <label>País:</label>
                         <br>
-                        <select name="pais" required>
+                        <select name="pais" required> <!--Agregar aquí una lista dinamica-->
                             <option value="mexico">México</option>
                             <option value="guatemala">Guatemala</option>
                             <option value="belice">Belice</option>
@@ -99,7 +97,7 @@
                     <p>
                         <label>Estado:</label>
                         <br>
-                        <select name="estado" required>
+                        <select name="estado" required> <!--Agregar aquí una lista dinamica-->
                             <option value="aguascalientes">Aguascalientes</option>
                             <option value="bcn">Baja California Norte</option>
                             <option value="bcs">Baja California Sur</option>
@@ -136,7 +134,7 @@
                     <p>
                         <label>Municipio:</label>
                         <br>
-                        <select name="municipio" required>
+                        <select name="municipio" required> <!--Agregar aquí una lista dinamica-->
                             <option value="amealco">Amealco de Bonfil</option>
                             <option value="arroyo">Arroyo Seco</option>
                             <option value="cadereyta">Cadereyta de Montes</option>
@@ -155,11 +153,29 @@
                             <option value="toliman">Tolimán</option>
                         </select>
                     </p>
-                </form>
-            </div>
-            
+                <div class="terminos">
+                    <p>
+                        <label>
+                            <input type="radio" name="terminos" value="acepta-terminos" required>
+                            Acepto los términos y condiciones
+                        </label>
+                    </p>
+                </div>
+                <div class="condiciones">
+                    <p>
+                        <label>
+                            <input type="checkbox" name="publicidad" value="acepta-publicidad">
+                            Deseo recibir ofertas y publicidad a mi correo electrónico
+                        </label>
+                    </p>
+                </div>
+                <div class="botones-registro">
+                    <button type="submit">Enviar mis datos</button>
+                </div>
+            </form> 
+        </div>
         </section>
-
+    <!--    
         <section>
             <h3>Datos de tu Mascota</h3>
             <div class="datos-mascota">
@@ -208,25 +224,12 @@
         </section>
 
         <section>
-            <div class="terminos">
-            <form>
-                <p>
-                    <label>
-                        <input type="radio" name="terminos" value="acepta-terminos" required>
-                        Acepto los términos y condiciones
-                    </label>
-                </p>
-
-                <p>
-                    <label>
-                        <input type="checkbox" name="publicidad" value="acepta-publicidad">
-                        Deseo recibir ofertas y publicidad a mi correo electrónico
-                    </label>
-                </p>
+            
                 <input type="submit" value="Enviar">
             </div> 
             </form>
         </section>
+    -->
         
     </main>
     <%- include('./partials/footer') %> 
