agregando estilos responsive de index.html y partials

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,7 +10,7 @@
         <p class="titulo">La mejor tienda de mascotas</p>
         <section class="top-main">
             <div class="mascotas-img">
-                <img src="../images/PortadaMascotas.png" alt="PortadaMascotas">
+                <img src="../images/PortadaMascotas.png" alt="PortadaMascotas" class="banner">
             </div>
             <div class="contenido-intro">
                 <div class="container-intro">
@@ -42,8 +42,8 @@
         </section>
         <section class="articulos">
             <a href="/edicion">
-            <article>
-                <img src="../images/croquetas.jfif"alt="producto-1">
+            <article class="producto">
+                <img src="../images/croquetas.jfif"alt="producto-1" class="producto-img">
                 <p class="product-detail">Alimento Pro Plan OptiDerma Sensitive Skin Adult para perro adulto de raza mediana/grande 13kg</p>
             </article>
             </a>
