--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -231,6 +231,7 @@ header  {
 }
 .logo {
 	width: 100%;
+	min-width: 140px;
 }
 header .header-top{
 	display: flex;
@@ -360,8 +361,25 @@ header .header-top div{
 	display: flex;
 	align-items: center;	
 }
-/*--------------------------------------------*/
-
+/*------RESPONSIVE---HEADER----------------------*/
+@media(max-width:426px){
+	header .header-top div.otros{
+		display: none;
+	}
+	header .header-top div.viviendas{
+		display: none;
+	}
+	header nav ul {
+		display: flex;
+		flex-direction: column;
+	}
+	header nav ul li{
+		text-align: center;
+	}
+	header .header-top div{
+		font-size: 11px;
+	}
+}
 /*--------------------------------------------*/
   /*Estilos del registro*/
 .logo-centrado{
@@ -524,6 +542,19 @@ main .form-edicion p{
 main .top-main .mascotas-img {
 	margin: 2vw;
 }
+main .top-main .mascotas-img img {
+	max-width: 550px;
+	width: 100%;
+}
+@media(max-width: 768px){
+	main .top-main{
+		display: flex;
+		flex-direction: column;
+	}
+	main .top-main .mascotas-img .banner{
+		text-align:center ;
+	}
+}
 main .top-main .container-intro{
 	max-width: 230px;
 	max-height: auto;
@@ -534,6 +565,7 @@ main .top-main .container-intro{
 	border-radius: 15%;
 	box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
+
 main .top-main .container-intro p{
 	margin: 0;
 	width: 100%;
@@ -555,6 +587,7 @@ main .container-intro .subtittle{
 }
 main  .titulo{
 	display: flex;
+	text-align: center;
 	justify-content: center;
 	font-size: 30px;
 	font-weight: bolder;
@@ -591,6 +624,7 @@ main .info-gral:hover{
 main .contenido-intro article:hover {
 	box-shadow: 0px 0px 10px rgb(100, 100, 100);
 }
+
 /*-------A-R-T-I-C-U-L-O-S-----------------*/
 main .articulos {
 	margin: 2vw;
@@ -602,6 +636,10 @@ main .articulos article p {
 	justify-content: space-between;
 	padding: 3%;
 }
+main .articulos .producto {
+	border: solid black 1px;
+}
+
 
 
 
