Al fin ya pude centrar el regstro :v

--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -16,67 +16,67 @@
             </div>
             <div class="form-registro">
             <form action="/" method="POST">
-                    <p>
+                    <p class="elt-reg">
                         <label for="nombre">Nombre (s):</label>
                         <br>
                         <input type="text" id="nombre" name="nombre" required>
                     </p>
                     
-                    <p>
+                    <p class="elt-reg">
                         <label for="apellidos">Apellidos:</label>
                         <br>
                         <input type="text" id="apellidos" name="apellidos" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="nacimiento">Fecha de nacimiento:</label>
                         <br>
                         <input type="date" id="nacimiento" name="nacimiento" min="2003-01-01" required>
                     </p>
                     
-                    <p>
+                    <p class="elt-reg">
                         <label for="email">e-mail:</label>
                         <br>
                         <input type="email" id="email" name="email" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="set-password">Contraseña:</label>
                         <br>
                         <input type="password" id="set-password" name="setpassword" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="confirm-pass">Confirmar contraseña:</label>
                         <br>
                         <input type="password" id="confirm-pass" name="confirm-pass" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="telefono">Teléfono:</label>
                         <br>
                         <input type="tel" id="telefono" name="telefono" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="calle">Calle y número:</label>
                         <br>
                         <input type="text" id="calle" name="calle" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="colonia">Colonia</label>
                         <br>
                         <input type="text" id="colonia" name="colonia" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label for="cp">Código postal:</label>
                         <br>
                         <input type="text" id="cp" name="cp" required>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label>País:</label>
                         <br>
                         <select name="pais" required> <!--Agregar aquí una lista dinamica-->
@@ -94,7 +94,7 @@
                         </select>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label>Estado:</label>
                         <br>
                         <select name="estado" required> <!--Agregar aquí una lista dinamica-->
@@ -131,7 +131,7 @@
                         </select>
                     </p>
 
-                    <p>
+                    <p class="elt-reg">
                         <label>Municipio:</label>
                         <br>
                         <select name="municipio" required> <!--Agregar aquí una lista dinamica-->
