--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -473,7 +473,7 @@ main section div.resumen input{
 	color: white;
 }
 
-/* Estilos Formularios (Edicion/Crear/Registro*/
+/* Estilos Formularios (Edicion/Crear/Registro)*/
 
 main .edicion-producto h1, .form-edicion, .botones-edicion,
 main .registro h1, .datos-personales h3, .botones-registro, .terminos, .condiciones, .form-registro
@@ -500,9 +500,18 @@ main .form-edicion p
 
 .terminos p, .condiciones p{
 	margin-block-start: 0em;
-	margin-inline-end: 0em;
+	margin-block-end: 0em;
 }
 
+.form-registro p.elt-reg{
+	margin-inline-start: 20%;
+    margin-inline-end: 20%;
+}
+
+.form-registro .elt-reg input,
+.form-registro .elt-reg select{
+	width : 100%;
+}
 /*--------M-A-I-N-----H-O-M-E---------------------*/
 main .top-main .mascotas-img {
 	margin: 2vw;
