--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -9,39 +9,29 @@
     <%- include('./partials/header') %>
 
     <main>
-        <h1>
-            Login
-        </h1>
-
-        <div>
+        <div class="login-title">
+            <h1>Login</h1>
+        </div>
+        <div class="login">
             <form method="GET" action="/">
-            <!-- Campo para recopilar el correo del usuario-->  
-                <p>
+                <p class="elt-login">
                     <label for="user"> Usuario:</label>
                 </p>
-                <p>
+                <p class="elt-login">
                     <input type="text" id="user" name="user" placeholder="email">
                 </p>
-            
-            <!-- Campo para recopilar la contraseña del usuario-->
                 <p>
                     <label for="password">Contraseña</label>
                 </p>
-                <p>
+                <p class="elt-login">
                     <input type="password" id="password" name="password">
                 </p>
-
-            <!-- CheckBox para recordarme-->
-                <p>
                     <input type="checkbox" name="rememberMe" value="recuerdame">
                     <label for="rememberMe"> Recuérdame </label>
-                </p>
-
-                <p>
-                    <button type="submit">Ingresar</button>
-                    <button type="submit">Recuperar contraseña</button>
-                </p>
-
+                <div class="botones-login">
+                        <button type="submit">Ingresar</button>
+                        <button type="submit">Recuperar contraseña</button>
+                </div>
             </form>
         </div>
     </main>
