--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -10,7 +10,19 @@
     <%- include('./partials/header') %>
 
     <main>
-        
+        <div class="products-products">
+            <% products.forEach(producto => { %>
+            <article>
+                <img src="/images/products/<%= producto.image_p %>" alt="<%= producto.name %>" class="product-img">
+                <div class="product-name">
+                    <h2><%= producto.name %></h2>
+                    <p><%= producto.description %></p>
+                    <h4><%= toThousand(producto.price) %></h4>
+                </div>
+            </article>
+            <% }) %>
+        </div>
+
     </main>
 
     <!--FOOTER--> 
