Mejorando estilos de /detalle

--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('./partials/head') %>
-    <title>Carrito</title>
+    <title>Todos los productos</title>
 </head>
 
 <body>
