Mejorando más estilos de /detalle

--- a/src/views/detalle.ejs
+++ b/src/views/detalle.ejs
@@ -10,7 +10,7 @@
     <%- include('./partials/header') %>
 
     <main>
-        <div class="titulo">
+        <div class="titulo-detalle">
             <h2>Detalle del Producto</h2>
         </div>
 
@@ -27,7 +27,7 @@
                             <select name="opciones">
                                 <option value="borrador">borrador</option>
                             </select>
-                            <div class="cantidad">
+                            <div class="detalle-cantidad">
                                 <input type="submit" value="-">
                                 <input type="number" value="cantidad">
                                 <input type="submit" value="+">
@@ -38,34 +38,33 @@
                         </form>
                     </div>
                 </div>
-
-                <div class="descripcion">
-                    <p>
-                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae duis duis at velit eu est congue elementum
-                        integer non velit donec diam neque vestibulum eget vulputate ut ultrices vel augue vestibulum ante ipsum
-                        duis at velit eu est congue elementum in hac habitasse platea dictumst morbi vestibulum velit id pretium iaculis 
-                        diam erat fermentum justo nec condimentum neque sapien placerat donec ut dolor morbi vel lectus in quam fringilla rhoncus mauris
-                    </p>
-                </div>
-
-                <div class="info-detalle">
-                    <nav class="info-detalle">
-                        <ul>
-                            <li>Características</li>
-                            <li>Especificaciones</li>
-                            <li>Instrucciones</li>
-                        </ul>
-                    </nav>
-                    <p>
-                        ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae duis duis at velit eu est congue elementum
-                        integer non velit donec diam neque vestibulum eget vulputate ut ultrices vel augue vestibulum ante ipsum
-                        duis at velit eu est congue elementum in hac habitasse platea dictumst morbi vestibulum velit id pretium iaculis 
-                        diam erat fermentum justo nec condimentum neque sapien placerat donec ut dolor morbi vel lectus in quam fringilla rhoncus mauris
-                    </p>
-                </div>
-
-
             </article>
+
+            <div class="detalle-descripcion">
+                <h3>Descripción:</h3>
+                <p>
+                    ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae duis duis at velit eu est congue elementum
+                    integer non velit donec diam neque vestibulum eget vulputate ut ultrices vel augue vestibulum ante ipsum
+                    duis at velit eu est congue elementum in hac habitasse platea dictumst morbi vestibulum velit id pretium iaculis 
+                    diam erat fermentum justo nec condimentum neque sapien placerat donec ut dolor morbi vel lectus in quam fringilla rhoncus mauris
+                </p>
+            </div>
+
+            <div class="info-detalle">
+                <nav>
+                    <ul>
+                        <li>Características</li>
+                        <li>Especificaciones</li>
+                        <li>Instrucciones</li>
+                    </ul>
+                </nav>
+                <p>
+                    ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae duis duis at velit eu est congue elementum
+                    integer non velit donec diam neque vestibulum eget vulputate ut ultrices vel augue vestibulum ante ipsum
+                    duis at velit eu est congue elementum in hac habitasse platea dictumst morbi vestibulum velit id pretium iaculis 
+                    diam erat fermentum justo nec condimentum neque sapien placerat donec ut dolor morbi vel lectus in quam fringilla rhoncus mauris
+                </p>
+            </div>
         </section>
 
 
