--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -514,8 +514,7 @@ main section.bolsa article{
 
 main section div.articulos-bolsa article{
 	display: flex;
-	justify-content: flex-start;
-	
+	justify-content: space-around;
 }
 
 main section div.descripcion-producto{
@@ -534,7 +533,7 @@ button, input, optgroup, select, textarea {
 }
 
 main section div.cantidad input{
-	width: 25px;
+	width: 60px;
 	height: 25px;
 }
 
@@ -652,3 +651,49 @@ main article .product-name{
     padding: 15px;
 }
 
+/*Estilos Detalle*/
+
+.titulo-detalle h2{
+	display: flex;
+	justify-content: flex-start;
+	text-decoration: underline;
+	margin-left: 3%;
+}
+
+section.detalle article {
+    display: flex;
+    justify-content: space-around;
+	margin: 3%;
+}
+
+.info-detalle nav{
+	margin: 3%;
+    padding: 0;
+}
+
+.info-detalle nav ul{
+	display: flex;
+    flex-wrap: nowrap;
+    font-size: 17px;
+    justify-content: space-around;
+    margin-left: 0;
+	background-color: #cc1f08;
+	line-height: 200%;
+	padding: 0px;
+}
+
+.info-detalle nav ul li{
+	justify-content: space-around;
+    font-weight: bolder;
+    color: white;
+}
+
+.info-detalle p{
+	margin: 0% 5% 5% 5%;
+	text-align: justify;
+}
+
+.detalle-descripcion{
+	margin: 0% 50% 1% 3%;
+	text-align: justify;
+}
