Agregando LOgica de creacion de un producto cen controller y routes de productos

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -41,7 +41,8 @@
             </div>
         </section>
         <section class="articulos">
-            <a href="/products/<%= product.id %> ">
+            <!--Aqui el link de cada detalle de producto-->
+            <a href="/products/1 ">
             <article class="producto">
                 <img src="../images/croquetas.jfif"alt="producto-1" class="producto-img">
                 <p class="product-detail">Alimento Pro Plan OptiDerma Sensitive Skin Adult para perro adulto de raza mediana/grande 13kg</p>
