--- a/src/views/crear.ejs
+++ b/src/views/crear.ejs
@@ -12,43 +12,60 @@
             <h1>Crear producto</h1>
         </div>
         <div class="form-edicion">
-            <form action="/" method="POST">
+            <form action="/productos/" method="POST" >
                 <div>
-                    <label for="nombre-producto">Nombre del producto:</label>
-                    <input type="text" id="nombre-producto" name="nombre-producto" class="input-text">
+                    <label for="name">Nombre del producto:</label>
+                    <input type="text" id="name" name="name" class="input-text">
                     
                 </div>
                 <div>
-                    <label for="img-principal">Imagen principal:</label>
-                    <input type="file" id="img-principal" name="img-principal" class="input-file">
+                    <label for="image-p">Imagen principal:</label>
+                    <input type="file" id="image-p" name="image-p" class="input-file">
                 </div>
                 <div>
-                    <label for="img-secundaria1">Imagen secundaria 1:</label>
-                    <input type="file" id="img-secundaria1" name="img-secundaria1" class="input-file">
+                    <label for="image_1">Imagen secundaria 1:</label>
+                    <input type="file" id="image_1" name="image_1" class="input-file">
                 </div>
                 <div>
-                    <label for="img-secundaria2">Imagen secundaria 2:</label>
-                    <input type="file" id="img-secundaria2" name="img-secundaria2" class="input-file">
+                    <label for="image_2">Imagen secundaria 2:</label>
+                    <input type="file" id="image_2" name="image_2" class="input-file">
                 </div>
                 <div>
-                    <label for="precio">Precio:</label>
-                    <input type="number" id="precio" name="precio" class="input-text">
+                    <label for="animal">Animal:</label>
+                    <select name="animal" id="animal">
+                        <option value="Polygender" selected>Polygender</option>
+                        <option value="Male">Masculino</option>
+                        <option value="Female">Femenino</option>
+                        <option value="Genderqueer">Genderqueer</option>
+                        <option value="Non-binar">Non-binar</option>
+                    </select>
+                    
                 </div>
                 <div>
-                    <label for="descripcion">Descripción:</label>
-                    <textarea id="descripcion" name="descripcion" class="input-area"></textarea>
+                    <label for="category">Categorias:</label>
+                    <select name="category" id="category">
+                        <option value="Bigender" selected>Bigender</option>
+                        <option value="Male">Masculino</option>
+                        <option value="Female">Femenino</option>
+                        <option value="Genderqueer">Genderqueer</option>
+                        <option value="Agender">Agender</option>
+                    </select>
                 </div>
                 <div>
-                    <label for="caracteristicas">Características:</label>
-                    <textarea id="caracteristicas" name="caracteristicas" class="input-area"></textarea>
+                    <label for="price">Precio:</label>
+                    <input type="number" id="price" name="price" class="input-text">
                 </div>
                 <div>
-                    <label for="especificaciones">Especificaciones:</label>
-                    <textarea id="especificaciones" name="especificaciones" class="input-area"></textarea>
+                    <label for="description">Descripción:</label>
+                    <textarea id="description" name="description" class="input-area"></textarea>
                 </div>
                 <div>
-                    <label for="instrucciones">Instrucciones:</label>
-                    <textarea id="instrucciones" name="instrucciones" class="input-area"></textarea>
+                    <label for="caracteristic">Características:</label>
+                    <textarea id="caracteristic" name="caracteristic" class="input-area"></textarea>
+                </div>
+                <div>
+                    <label for="specs">Especificaciones:</label>
+                    <textarea id="specs" name="specs" class="input-area"></textarea>
                 </div>
                 <div class="botones-edicion">
                     <button type="submit">Enviar</button>
