--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -42,7 +42,7 @@
         </section>
         <section class="articulos">
             <!--Aqui el link de cada detalle de producto-->
-            <a href="/products/1 ">
+            <a href="/productos/291751066-8">
             <article class="producto">
                 <img src="../images/croquetas.jfif"alt="producto-1" class="producto-img">
                 <p class="product-detail">Alimento Pro Plan OptiDerma Sensitive Skin Adult para perro adulto de raza mediana/grande 13kg</p>
