Empezando Eliminar producto (DELETE)

--- a/src/views/edicion.ejs
+++ b/src/views/edicion.ejs
@@ -51,6 +51,7 @@
                 <div class="botones-edicion">
                     <button type="submit">Enviar</button>
                     <button type="button">Cancelar</button>
+                    <button type="button">Eliminar</button>
                 </div>
             </form>
         </div>
